[gd_scene load_steps=4 format=2]

[ext_resource path="res://ressources/img/effects/explosion.png" type="Texture" id=1]
[ext_resource path="res://ressources/script/effect/explosion.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 4.34568

[node name="explosion" type="Area2D"]
collision_layer = 192
collision_mask = 37
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0.363636, 1.05964e-08 )
scale = Vector2( 0.727273, 0.8 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 26, 27, 11, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 1 )
texture_scale = 1.87
color = Color( 0.913725, 1, 0.552941, 1 )
energy = 1.15
mode = 2

[connection signal="area_entered" from="." to="." method="_on_explosion_area_entered"]
[connection signal="area_shape_entered" from="." to="." method="_on_explosion_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_explosion_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_explosion_body_shape_entered"]
